charts/ingress-poi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/poi/healthcheck
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/poi/healthcheck
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 80
