charts/ingress-tripviewer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix   
        backend:
          service:
            name: tripviewer
            port:
              number: 80
