charts/ingress-userprofile.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csas-oh-aks-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/user/healthcheck
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/user/healthcheck
        pathType: Prefix   
        backend:
          service:
            name: userprofile
            port:
              number: 80
